<resources>
    <string name="cov_login_for_chat">连接 AI 引擎</string>
    <string name="cov_detail_agent_title">声网对话式 AI 引擎</string>
    <string name="cov_detail_not_joined">未加入</string>
    <string name="cov_detail_join_call">连接对话式 AI 引擎</string>
    <string name="cov_detail_end_call">结束通话</string>
    <string name="cov_detail_agent_joining">加入中</string>
    <string name="cov_detail_agent_ending">停止中</string>
    <string name="cov_detail_join_call_failed">智能体加入失败，请稍后重试。</string>
    <string name="cov_detail_join_call_succeed">智能体已加入！</string>
    <string name="cov_detail_join_call_tips">请在对话初期大声、清晰地说话，提升智能体对您的声音锁定效果。</string>
    <string name="cov_detail_agent_leave">智能体已离开！</string>
    <string name="cov_detail_message_list_you">你</string>
    <string name="cov_detail_connecting">连接中…</string>
    <string name="cov_detail_agent_join_timeout">智能体加入超时，请稍后重试。</string>
    <string name="cov_detail_agent_state_error">智能体状态异常，请退出重试。</string>
    <string name="cov_detail_net_state_error">网络异常，请检查网络设置。</string>
    <string name="cov_detail_state_error">智能体状态异常，请重试。</string>
    <string name="cov_detail_room_error">房间已经不存在了，请发起一个新的会话。</string>
    <string name="cov_detail_start_agent_limit_error">当前预设资源超限，请稍后重试</string>
    <string name="cov_detail_login_rtm_error">RTM 登录失败\n %s</string>
    <string name="cov_detail_renew_rtm_token_error">RTM renewToken 失败.\n %s</string>
    <string name="cov_detail_update_token_error">获取 Token 失败</string>
    <string name="cov_detail_llm_error">LLM 异常</string>
    <string name="cov_detail_tts_error">TTS 异常</string>
    <string name="cov_detail_start_agent_avatar_limit_error">所有数字人正忙，请稍后重试</string>
    <string name="cov_info_dialog_title">信息</string>
    <string name="cov_channel_info_title">频道信息</string>
    <string name="cov_info_agent_status">智能体状态</string>
    <string name="cov_info_agent_id">智能体 ID</string>
    <string name="cov_info_agent_connected">已连接</string>
    <string name="cov_info_room_status">房间状态</string>
    <string name="cov_info_room_id">房间 ID</string>
    <string name="cov_info_empty">--</string>
    <string name="cov_info_participant_id">参与者 ID</string>
    <string name="cov_info_your_id">您的 ID</string>
    <string name="cov_info_your_network">您的网络</string>
    <string name="cov_info_your_network_disconnected">未连接</string>
    <string name="cov_info_your_network_good">良好</string>
    <string name="cov_info_your_network_medium">一般</string>
    <string name="cov_info_your_network_poor">较差</string>
    <string name="cov_netwotk_info_title">网络信息</string>
    <string name="cov_info_logout">退出登录</string>
    <string name="cov_info_more">更多操作</string>
    <string name="cov_info_uploader">一键上报</string>
    <string name="cov_info_call_data">通话数据</string>
    <string name="cov_info_data_report">数据报告</string>
    <string name="cov_info_report_generate_tip">通话结束后生成</string>
    <string name="cov_setting_title">智能体设定</string>
    <string name="cov_setting_title_connected">(连接中不可修改)</string>
    <string name="cov_setting_agent">智能体</string>
    <string name="cov_setting_preset">预设</string>
    <string name="cov_setting_voice">语音</string>
    <string name="cov_setting_model">模型</string>
    <string name="cov_setting_language">语言</string>
    <string name="cov_setting_avatar">数字人</string>
    <string name="cov_setting_avatar_all">全部</string>
    <string name="cov_setting_device">设备</string>
    <string name="cov_setting_advanced_settings">高级设置</string>
    <string name="cov_setting_microphone">麦克风</string>
    <string name="cov_setting_speaker">扬声器</string>
    <string name="cov_setting_bhvs">启用 对话人声锁定</string>
    <string name="cov_setting_ai_vad">启用&#160;&#160;</string>
    <string name="cov_setting_ai_vad_high">优雅打断</string>
    <string name="cov_setting_ai_vad_high_desc">优雅打断是声网自研智能打断算法，能够自动判断当前用户说话的语境并执行打断策略</string>
    <string name="cov_setting_ai_pause">智能暂停</string>
    <string name="cov_setting_ai_pause_desc">智能暂停是声网自研高阶智能体对话算法，支持让智能体临时停下逻辑推理去做其他事情，返回后继续让智能体按照打断前的节点继续的技术</string>
    <string name="cov_setting_network_error">请求失败：</string>
    <string name="cov_agent_connecting">连接中...</string>
    <string name="cov_copy_succeed">已复制</string>
    <string name="cov_interrupted">已打断</string>
    <string name="cov_real_time_data">实时数据</string>
    <string name="cov_latency_metrics_current_round">#</string>
    <string name="cov_latency_metrics_total">端到端:</string>
    <string name="cov_latency_metrics_value_ms">%1$dms</string>
    <string name="cov_latency_metrics_chip_format">%1$s%2$s</string>
    <string name="cov_latency_metrics_label_rtc">RTC:</string>
    <string name="cov_latency_metrics_label_ai">AI 音频:</string>
    <string name="cov_latency_metrics_label_asr">ASR:</string>
    <string name="cov_latency_metrics_label_llm">LLM:</string>
    <string name="cov_latency_metrics_label_tts">TTS:</string>
    <string name="cov_agent_silent">你可以开始说话</string>
    <string name="cov_agent_listening">正在听…</string>
    <string name="cov_agent_thinking">说话或点击打断</string>
    <string name="cov_agent_speaking">说话或点击打断</string>
    <string name="cov_user_muted">已静音</string>
    <string-array name="cov_setting_microphone_array">
        <item>内置麦克风</item>
    </string-array>
    <string-array name="cov_setting_speaker_array">
        <item>内置扬声器</item>
    </string-array>
    <string name="cov_permission_required">需要权限</string>
    <string name="cov_mic_permission_required_content">语音聊天需要麦克风权限。请授予权限以继续。</string>
    <string name="cov_camera_permission_required_content">视频流需要相机权限。请授予权限以继续。</string>
    <string name="cov_notifications_enable_tip">请打开通知权限，防止后台录音中断。</string>
    <string name="cov_setting">设置</string>
    <string name="cov_retry">重试</string>
    <string name="cov_exit">退出</string>
    <string name="cov_notification_content">点击返回应用</string>
    <string name="cov_iot_title">对话式 AI 设备</string>
    <string name="cov_iot_devices_num">%d个设备</string>
    <string name="cov_my_device">我的设备</string>
    <string name="cov_preset_change_dialog_title">更换Preset需重新设置数字人</string>
    <string name="cov_preset_change_dialog_content">Preset 和数字人的性别相关，更换 Preset 后请重新设置数字人</string>
    <string name="cov_language_change_dialog_title">更换Language需重新设置数字人</string>
    <string name="cov_language_change_dialog_content">Language 和数字人的性别相关，更换 Language 后请重新设置数字人</string>
    <string name="cov_preset_change_dialog_confirm">确定变更</string>
    <string name="cov_captions">字幕</string>
    <string name="cov_preset_not_support_vision">当前 Preset 不支持视觉理解相关功能，请切换其他 Preset 体验！</string>
    <string name="cov_vision_connect_and_try_again">请连接后重试！</string>
    <string name="cov_photo_format_tips">仅支持 JPG、PNG、WEBP 和 JPEG 格式的图片。</string>
    <string name="cov_photo_type_photo">照片</string>
    <string name="cov_photo_type_camera">拍照</string>
    <string name="cov_photo_edit_done">完成</string>
    <string name="cov_photo_permission_storage_gallery">访问相册权限用于选择照片。请在设置中开启权限。</string>
    <string name="cov_photo_permission_camera">相机权限用于拍摄照片。请在设置中开启权限。</string>
    <string name="cov_photo_permission_storage_camera">访问相册权限可以在拍照页面显示最新照片预览。您可以选择跳过此权限。</string>
    <string name="cov_photo_permission_skip">跳过</string>
    <string name="cov_photo_permission_enable">开启权限</string>
    <string name="cov_photo_permission_go_settings">去设置</string>
    <string name="cov_photo_permission_cancel">取消</string>
    <string name="cov_official_agent_title">官方智能体</string>
    <string name="cov_custom_agent_title">自定义智能体</string>
    <string name="cov_custom_agent_acquire">获取你的智能助手</string>
    <string name="cov_custom_agent_acquire_tip">请找声网员工获取自定义智能体ID</string>
    <string name="cov_custom_agent_input_tip">输入智能体ID获取</string>
    <string name="cov_custom_agent_get">获取</string>
    <string name="cov_voiceprint_lock">声纹锁定</string>
    <string name="cov_voiceprint_lock_success">引擎将学习您说话的声纹，过滤周围其他人的声音和噪音</string>
    <string name="cov_word_mode">Word 模式</string>
    <string name="cov_word_mode_tips">逐字渲染，字幕和语音同步</string>
    <string name="cov_text_sync_mode">Text-同步模式</string>
    <string name="cov_text_sync_mode_tips">字幕和语音同步展示的 Text 模式</string>
    <string name="cov_text_first_mode">Text-字幕先出模式</string>
    <string name="cov_text_first_mode_tips">字幕一次性展示</string>
    <string name="cov_transcript_render_mode">字幕渲染模式</string>
    <string name="cov_remove_agent_title">删除智能体</string>
    <string name="cov_remove_agent_content">确定要删除智能体「%s」吗？</string>
    <string name="cov_remove_agent_confirm">删除</string>
    <string name="cov_remove_agent_cancel">取消</string>
    <string name="cov_get_agent_success">智能体获取成功</string>
    <string name="cov_get_agent_failed">智能体获取失败，当前数据库无此智能体</string>
    <string name="cov_get_agent_offline">智能体已被下线，请联系声网工作人员</string>
    <string name="cov_retry_tips">页面加载失败，请重试</string>
    <string name="cov_voiceprint_recognition">声纹锁定</string>
    <string name="cov_voiceprint_close">关闭</string>
    <string name="cov_voiceprint_close_tips">若不启用，智能体可能被周围其他人的声音打断或干扰。</string>
    <string name="cov_voiceprint_seamless">无感模式</string>
    <string name="cov_voiceprint_seamless_tips">AI 将智能学习与智能体会话的用户声纹，自动屏蔽其他用户声纹。</string>
    <string name="cov_voiceprint_personalized">有感模式</string>
    <string name="cov_voiceprint_personalized_tips">录入一段你的声纹，智能体将自动屏蔽其它声音</string>
    <string name="cov_voiceprint_has">本机有声纹录入</string>
    <string name="cov_voiceprint_create_mine_voice">创建我的声纹</string>
    <string name="cov_voiceprint_recording">创建</string>
    <string name="cov_voiceprint_re_recording">重新录入</string>
    <string name="cov_voiceprint_uploading">上传中…</string>
    <string name="cov_loading">Loading</string>
    <string name="cov_voiceprint_upload_failed">上传失败，请重试</string>
    <string name="cov_voiceprint_upload_success">语料上传成功</string>
    <string name="cov_voiceprint_no_voice">未录入声纹</string>
    <string name="cov_voiceprint_no_voice_tips">未录入有效声纹，切换有感模式失效，退出将自动切换至【上一个选择的模式】模式。</string>
    <string name="cov_voiceprint_exit">退出</string>
    <string name="cov_voiceprint_title">请大声朗读这首诗</string>
    <string name="cov_voiceprint_title1">录音中，请朗读…</string>
    <string name="cov_voiceprint_content">
        君不见黄河之水天上来，奔流到海不复回。
        \n\n君不见高堂明镜悲白发，朝如青丝暮成雪。
        \n\n人生得意须尽欢，莫使金樽空对月。
        \n\n天生我材必有用，千金散尽还复来。</string>
    <string name="cov_voiceprint_long_pressed">长按录制</string>
    <string name="cov_voiceprint_recording_only_one">只允许录入一条声纹，重新录入历史声纹将被删除</string>
    <string name="cov_voiceprint_release_to_create">松手创建，上移取消</string>
    <string name="cov_voiceprint_release_to_cancel">松手取消</string>
    <string name="cov_voiceprint_duration">语料：%1s/%2s</string>
    <string name="cov_voiceprint_recording_short">录制时间过短，请至少录制10s语料</string>
    <string name="cov_voiceprint_recording_auto_end">录制自动结束</string>
    <string name="cov_voiceprint_recording_uploading">语料录制成功上传中，请稍后</string>
    <string name="cov_voiceprint_recording_upload_failed">语料上传失败，请重试</string>
    <string name="cov_voiceprint_prepare_recording">准备录制中…</string>
    <string name="cov_voiceprint_prepare">准备录制</string>
    <string name="cov_voiceprint_name_format">%s声纹</string>
    <string name="cov_voiceprint_date_format">yyyy年MM月dd日</string>
    <string name="cov_voiceprint_recording_tips_title">声纹录入提示</string>
    <string name="cov_voiceprint_recording_tips_content">您的声音默认存储在本机，声网有感声纹锁定功能需要收集您的声音，单次体验该功能完毕后会将云端声纹删除，绝对不会使用您的声音用作商业用途。</string>
    <string name="cov_agent_generator_by_ai">以上对话内容均由AI生成</string>
    <string name="cov_privacy_policy">个人信息保护指引</string>
    <string name="cov_privacy_policy_content">欢迎使用声网对话式 AI 引擎！当您点击“同意”时，视为您已阅读并愿意接受《用户协议》和《隐私政策的所有内容》。当您点击“不同意”时，将无法体验本应用的完整功能。</string>
    <string name="cov_agree">同意</string>
    <string name="cov_disagree">不同意</string>
    <string name="cov_mine_delete_account">注销账号</string>
    <string name="cov_mine_settings">设置</string>
    <string name="cov_mine_should">称呼您为</string>
    <string name="cov_mine_mr">先生</string>
    <string name="cov_mine_ms">女士</string>
    <string name="cov_settings_version_format">Version: %s</string>
</resources>