<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_common_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/ai_icontext1"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="24dp"
        android:textStyle="bold"
        android:text="@string/cov_privacy_policy"/>

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:paddingHorizontal="24dp"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/ai_icontext2"
        android:textSize="14sp"
       android:text="@string/cov_privacy_policy_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNegative"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ai_dp_default"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            android:textColor="@color/ai_icontext2"
            android:textSize="14sp"
            android:background="@android:color/transparent"
            android:text="@string/cov_disagree"
            app:rippleColor="#1A000000" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPositive"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ai_dp_default"
            android:layout_weight="1"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            android:textColor="@color/ai_brand_white10"
            android:textSize="14sp"
            app:backgroundTint="@color/ai_brand_main6"
            app:cornerRadius="12dp"
            android:layout_marginTop="8dp"
            app:rippleColor="#1AFFFFFF"
            android:text="@string/cov_agree"/>
    </LinearLayout>
</LinearLayout>