<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ai_fill2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="9dp"
            android:src="@drawable/app_icon_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cov_mine_should"
            android:textColor="@color/ai_icontext1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48" />

    <FrameLayout
        android:id="@+id/layout_gender_male"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide50"
        app:layout_constraintWidth_percent="0.52">

        <ImageView
            android:id="@+id/iv_avatar_male"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/common_default_male" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/common_bg_brand6_radius99"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:text="@string/cov_mine_mr"
            android:textAllCaps="false"
            android:textColor="@color/ai_brand_white10"
            android:textSize="14sp"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_gender_female"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/guide50"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.52">

        <ImageView
            android:id="@+id/iv_avatar_female"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/common_default_female" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/common_bg_brand6_radius99"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="2dp"
            android:text="@string/cov_mine_ms"
            android:textAllCaps="false"
            android:textColor="@color/ai_brand_white10"
            android:textSize="14sp"
            android:visibility="gone" />
    </FrameLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ai_dp_default"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="40dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/common_confirm"
        android:textAllCaps="false"
        android:textColor="@color/ai_brand_white10"
        android:textSize="14sp"
        app:backgroundTint="@color/ai_brand_main6"
        app:cornerRadius="12dp"
        app:iconGravity="textStart"
        app:iconTint="@color/ai_brand_white10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:rippleColor="#1AFFFFFF" />
</androidx.constraintlayout.widget.ConstraintLayout>
